scc/tests/cc/error/0023-include.c
/*
 * Test a comment that goes beyond of the end of an
 * included file
 */

#include "0023-include.h"
